Added delegate handling and implemented new datasources system

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -9,3 +9,4 @@
 "loginButton" = "Let's Go!";
 "usernamePlaceholder" = "Username";
 "passwordPlaceholder" = "Password";
+"myPostsHeading" = "My Posts";
