Style attributed strings from localized strings

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "usernamePlaceholder" = "Username";
 "passwordPlaceholder" = "Password";
 "myPostsHeading" = "My Posts";
+"newPostTipsTitle" = "HOT TIPS FOR GREAT CONTENT";
