Fixed styling. WIP Navigation routing

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -11,3 +11,4 @@
 "passwordPlaceholder" = "Password";
 "myPostsHeading" = "My Posts";
 "newPostTipsTitle" = "HOT TIPS FOR GREAT CONTENT";
+"select" = "Select";
