UI Styling. Refactored label instancing

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -12,3 +12,10 @@
 "myPostsHeading" = "My Posts";
 "newPostTipsTitle" = "HOT TIPS FOR GREAT CONTENT";
 "select" = "Select";
+"profileInformation" = "Profile Information";
+"subscription" = "Subscription";
+"frequentlyAskedQuestions" = "Frequently asked questions";
+"privacyPolicy" = "Privacy Policy";
+"termsAndConditions" = "Terms & Conditions";
+"shareProfile" = "Share Boomday profile";
+"logout" = "Log out";
