--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -23,3 +23,6 @@
 "accountSettings" = "ACCOUNT SETTINGS";
 "support" = "SUPPORT";
 "legal" = "LEGAL";
+"displayName" = "Display Name";
+"displayBio" = "Display Bio";
+"trailerVideo" = "Trailer Video";
