--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -26,3 +26,5 @@
 "displayName" = "Display Name";
 "displayBio" = "Display Bio";
 "trailerVideo" = "Trailer Video";
+"change" = "Change";
+"subscribers" = "Subscribers";
