--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -28,3 +28,5 @@
 "trailerVideo" = "Trailer Video";
 "change" = "Change";
 "subscribers" = "Subscribers";
+"disabled" = "Disabled";
+"enabled" = "Enabled";
