Added styling for textview

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -37,3 +37,6 @@
 "payouts" = "Payouts";
 "totalBalance" = "Total Balance";
 "lifetimeTotalVolume" = "Lifetime Total Volume";
+"videoToUpload" = "MEDIA TO UPLOAD";
+"addTitle" = "ADD TITLE";
+"captionTitle" = "CAPTION ABOUT THIS POST";
