Added layout/view for text view for caption

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -40,3 +40,4 @@
 "videoToUpload" = "MEDIA TO UPLOAD";
 "addTitle" = "ADD TITLE";
 "captionTitle" = "CAPTION ABOUT THIS POST";
+"publish" = "PUBLISH POST";
