Custom UIColor extension working. Added primaryRed, fixing button and textfield layout to edges

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -41,3 +41,5 @@
 "addTitle" = "ADD TITLE";
 "captionTitle" = "CAPTION ABOUT THIS POST";
 "publish" = "PUBLISH POST";
+"notABroadcaster" = "Not a Broadcaster?";
+"learnMore" = "Learn more";
