--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -43,3 +43,4 @@
 "publish" = "PUBLISH POST";
 "notABroadcaster" = "Not a Broadcaster?";
 "learnMore" = "Learn more";
+"forgotPassword" = "Forgot your password?";
