Fixed insets, moved forgot password to correct location, removed the bottom stack view and removed the unused error display

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 */
 
 "none" = "";
-"loginButton" = "Let's Go!";
+"loginButton" = "Sign In";
 "usernamePlaceholder" = "Username";
 "passwordPlaceholder" = "Password";
 "myPostsHeading" = "My Posts";
