--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -44,3 +44,4 @@
 "notABroadcaster" = "Not a Broadcaster?";
 "learnMore" = "Learn more";
 "forgotPassword" = "Forgot your password?";
+"welcome" = "Welcome";
