--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -46,3 +46,12 @@
 "forgotPassword" = "Forgot your password?";
 "welcome" = "Welcome";
 "tryAgain" = "Try Again";
+"error" = "Error";
+
+// MARK: Error Strings
+"unknownError" = "An unknown error occured";
+"unsupportedError" = "This functionality is not currently supported";
+"decodingError" = "Failed decoding response with error";
+"apiNotFoundError" = "This call does not exist in the API";
+"apiStatusCodeError" = "The Web API returned an undefined error code";
+"invalidError" = "Invalid Error";
