Linking image picker to selected media when uploading

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -47,6 +47,7 @@
 "welcome" = "Welcome";
 "tryAgain" = "Try Again";
 "error" = "Error";
+"addMedia" = "Add video/photo";
 
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
