Convert media type to variables in info

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -53,6 +53,10 @@
 "newPost" = "New Post";
 "tips" = "TIPS";
 "noMedia" = "No media";
+"duration" = "Run Time";
+"video" = "Video";
+"image" = "Image";
+
 
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
