Added remove button with new destructive text button styling

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -56,7 +56,7 @@
 "duration" = "Run Time";
 "video" = "Video";
 "image" = "Image";
-
+"remove" = "Remove";
 
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
