Progress bar text label and upload handling of errors

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -57,6 +57,9 @@
 "video" = "Video";
 "image" = "Image";
 "remove" = "Remove";
+"uploadCompleted" = "Upload successful!";
+"uploadFailed" = "Upload failed!";
+"uploading" = "Uploading media - ";
 
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
