--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 */
 
 "none" = "";
+"nonExistant" = "---";
 "loginButton" = "Sign In";
 "usernamePlaceholder" = "Username";
 "passwordPlaceholder" = "Password";
