Fixed navigation bar and background image

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -77,7 +77,7 @@
 "no" = "No";
 "cancelChanges" = "Cancel Changes";
 "cancelChangesDescription" = "This will remove draft content";
-
+"post" = "Post";
  
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
