--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -80,7 +80,8 @@
 "post" = "Post";
 "myProfile" = "My Profile";
 "version" = "Version";
- 
+"deletePost" = "Delete Post";
+
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
 "unsupportedError" = "This functionality is not currently supported";
