Setup correct header heights

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "usernamePlaceholder" = "Username";
 "passwordPlaceholder" = "Password";
 "myPostsHeading" = "My Posts";
+"profileDetailHeading" = "Profile Information";
 "newPostTipsTitle" = "HOT TIPS FOR GREAT CONTENT";
 "select" = "Select";
 "profileInformation" = "Profile Information";
