Trailer view layout

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -83,6 +83,7 @@
 "version" = "Version";
 "email" = "Email";
 "userHandle" = "User Handle";
+"uploadTrailer" = "Upload Trailer";
 
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
