--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -85,6 +85,7 @@
 "userHandle" = "User Handle";
 "uploadTrailer" = "Upload Trailer";
 "changeVideo" = "Change Video";
+"emailUserNotModifiableInfo" = "Email and User Handle cannot be modified.";
 
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
