Setup title heading, added no icon flag for disabled text field cells

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -13,6 +13,7 @@
 "passwordPlaceholder" = "Password";
 "myPostsHeading" = "My Posts";
 "profileDetailHeading" = "Profile Information";
+"profileStripeAccountHeading" = "Stripe Account";
 "newPostTipsTitle" = "HOT TIPS FOR GREAT CONTENT";
 "select" = "Select";
 "profileInformation" = "Profile Information";
