--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -89,6 +89,7 @@
 "changeVideo" = "Change Video";
 "emailUserLockedInfo" = "Email and User Handle cannot be modified.";
 "stripeAccountLockedInfo" = "Connected Account details are locked on this screen.";
+"processing" = "Processing";
 
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
