--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -90,6 +90,7 @@
 "emailUserLockedInfo" = "Email and User Handle cannot be modified.";
 "stripeAccountLockedInfo" = "Connected Account details are locked on this screen.";
 "processing" = "Content is being processed";
+"noPosts" = "NO POSTS";
 
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
