Fixed text for locker/my locker

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -72,7 +72,7 @@
 "tip3Title" = "Lights. Sound. Action!";
 "tip3SubTitle" = "Good sound and lighting make great videos";
 "close" = "Close";
-"myLocker" = "My Locker";
+"locker" = "Locker";
 "comments" = "Comments";
 "ago" = "ago";
 "yes" = "Yes";
