Setup new persistence service with user defaults

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -101,3 +101,4 @@
 "invalidError" = "Invalid Error";
 "publishError" = "Pushing your post failed, try again later";
 "uploadEventError" = "An error occured attempting to upload and publish your post";
+"internalMemoryError" = "Internal Memory Error";
