--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -95,7 +95,7 @@
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
 "unsupportedError" = "This functionality is not currently supported";
-"refusedError" = "Connection to the server is unreachable, please try a different network";
+"refusedError" = "The boomday server cannot be reached or your connection has been refused. Connect to a different network and try again.";
 "decodingError" = "Failed decoding response with error";
 "apiNotFoundError" = "This call does not exist in the API";
 "authenticationFailedError" = "Username and password combination are invalid. Please enter double check your username and password";
