--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -91,6 +91,7 @@
 "stripeAccountLockedInfo" = "Connected Account details are locked on this screen.";
 "processing" = "Content is being processed";
 "noPosts" = "NO POSTS";
+"Saving" = "Saving";
 
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
