Fixed terms and conditions layout and link pressing

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -92,6 +92,8 @@
 "processing" = "Content is being processed";
 "noPosts" = "NO POSTS";
 "saving" = "Saving";
+"usingAppAccept" = "By using this app you accept the";
+"usingAppAccept" = "By using this app you accept the";
 
 // MARK: Error Strings
 "unknownError" = "An unknown error occured";
