Fixed text issues

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -105,7 +105,7 @@
 "refusedError" = "The boomday server cannot be reached or your connection has been refused. Connect to a different network and try again.";
 "decodingError" = "Failed decoding response with error";
 "apiNotFoundError" = "This call does not exist in the API";
-"authenticationFailedError" = "Username and password combination are invalid. Please enter double check your username and password";
+"authenticationFailedError" = "Username and password combination are invalid. Please double check your username and password";
 "apiStatusCodeError" = "The Web API returned an undefined error code";
 "invalidError" = "Invalid Error";
 "publishError" = "Pushing your post failed, try again later";
