Add send debug log option to profile view

--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -21,6 +21,7 @@
 "privacyPolicy" = "Privacy Policy";
 "termsAndConditions" = "Terms & Conditions";
 "shareProfile" = "Share Boomday profile";
+"sendLog" = "Send Debug Log";
 "logout" = "Sign Out";
 "accountSettings" = "Account settings";
 "support" = "Help & Support";
