--- a/Broadcast/Assets/Strings/en.lproj/Localizable.strings
+++ b/Broadcast/Assets/Strings/en.lproj/Localizable.strings
@@ -53,6 +53,7 @@
 "tryAgain" = "Try Again";
 "error" = "Error";
 "addMedia" = "Add video/photo";
+"addVideoMedia" = "Add video";
 "newPost" = "New Post";
 "tips" = "TIPS";
 "noMedia" = "No media";
